<resources>
    <string name="app_name">WorldScrawl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="worlds">Worlds</string>
    <string name="stories">Stories</string>
    <string name="characters">Characters</string>
    <string name="space" />
    <string name="add_a_profile">Add a profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_detail_title">Add a detail</string>
    <string name="add_a_detail">Add a detail</string>
    <string name="profile">Profile</string>
    <string name="write_something">Write something!</string>
    <string name="enter_a_label">Enter a label</string>
    <string name="enter_name">Enter Name</string>
    <string name="default_character_name">Unnamed</string>
    <string name="title">Title</string>
    <string-array name="add_details_array">
        <item>SINGLE</item>
        <item>PARAGRAPH</item>
        <item>CATEGORY</item>
    </string-array>
    <string-array name="add_outlines_array">
        <item>FREEFORM</item>
        <item>PINCH</item>
        <item>FREYTAG</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_tag_title">Select a tag to add</string>
    <string name="add_outline">Select a type of outline</string>
    <string name="savedOutlineToast">Outline saved</string>
    <string name="enter_title">Enter title</string>
    <string name="add_a_story">Add a Story</string>
    <string name="Insert_text_here">Insert text here...</string>

    <string name="freytag_intialization">Add a Story</string>
    <string name="pinch_initialize"><![CDATA[<h2>Inciting Incident</h2><h3>Plot Point 1</h3><h3>Pinch Point 1</h3><h2>Confrontation</h2><h3>Pinch Point 2</h3><h3>Plot Point 2</h3><h2>Resolution</h2><h3>Climax</h3><div><br></div>]]></string>
    <string name="skip_edit_page">edit page</string>
    <string name="back_to_tabs">root_fragment</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="outlines">Outlines</string>
    <string name="login">LOGIN</string>
    <string name="icon">ICON</string>
    <string name="tags">Tags:</string>

</resources>