<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".editprofile.EditProfileFragment"
    app:contentPaddingLeft="16dp"
    app:contentPaddingRight="16dp"
    app:contentPaddingTop="8dp"
    app:contentPaddingBottom="8dp"
    android:id="@+id/profile_edit_text_card_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profile_edit_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="30sp"
            android:text="@string/title"
            android:hint="@string/enter_a_label"
            android:inputType="textCapWords"/>

        <ImageButton
            android:id="@+id/trashButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="150dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/write_something"
            app:counterEnabled = "true"
            app:counterMaxLength = "1200"
            app:counterTextAppearance = "@style/editStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_edit_detail_body"
                android:maxLength="1200"
                android:inputType="textCapSentences"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>